--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "name": "service-2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "4.13.4"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node service.js"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
